# moli-p2p

./: .gitignore  AGENTS.md  ANTIGRAVITY_INSTRUCTIONS.md  FUTURE_CONCEPTS.md  PHILOSOPHY.md  README.md  SECURITY_AUDIT_PROPOSAL.md  SECURITY_AUDIT_REPORT_V2.md  TESTING_PROCEDURE.md  USER_MANUAL.md  benchmark  benchmark.js  deploy.config.template  deploy_manual_binary.sh  deploy_p2.sh  deploy_p3.sh  deploy_p3_fixed.sh  deploy_to_production.sh  deployment.md  docker-compose.yml  in  moli-p2p.service  package.json  patch_errors.js  patch_errors2.js  patch_fileoffer.patch  patch_main.patch  patch_peermachine.js  patch_types.js  run_tests.sh  setup_vps_initial.sh  spec.md  start_app.sh  update_main.js  update_p2pnetwork.js  update_types_vault.js
client/: Dockerfile  benchmark.ts  benchmark_db.html  index.html  nginx.conf  package-lock.json  package.json  run_bench.cjs  test_ui.html  tsconfig.json  vite.config.ts
client/public/: error-handler.js  jslicenses.html  llms.txt
client/src/: P2PNetwork.ts  PeerIdentity.ts  PeerSession.ts  blobRegistry.ts  constants.ts  main.ts  style.css  types.ts  ui.ts  (+2 more)
scripts/: package-lock.json  package.json  verify_server.js
server/: Cargo.toml  Dockerfile
server/benches/: benchmark_simulation.rs
server/src/: main.rs
tests/: benchmark_imagestore.ts  benchmarks.test.ts  requirements.txt  signature.test.ts
tla/: AsyncOfferPull.cfg  AsyncOfferPull.old  AsyncOfferPull.tla  LazyGossip.cfg  LazyGossip.old  LazyGossip.tla  MoliP2P.cfg  MoliP2P.tla  MoliP2P_trace_T2026-03-20_08-02-11_F28_W1_Mbfs.tlc  README.md  README_TLA.md  verify.sh
(+15 files in other folders)
