[package]
name = "server"
version = "0.1.7"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "fast-rng", "macro-diagnostics"] }


hmac = "0.12"
sha1 = "0.10"
base64 = "0.21"
dotenv = "0.15.0"
